Initial code commit

--- a/settings.ini
+++ b/settings.ini
@@ -1,21 +1,21 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = sea_ice_segmentation
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
+user = panchinabil
+description = Code related to the paper titled "Supplementing remote sensing of ice: Deep learning-based image segmentation system for automatic detection and localization of sea-ice formations from close-range optical images"
+#keywords = some keywords
+author = Nabil Panchi
+author_email = panchinabil1@gmail.com
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
-audience = Developers
+audience = Developers and sea-ice experts
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
